--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularHomeAutomate</title>
+  <title>HomeAutomate</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72x72.png" /> 
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.png" />
 </head>
 <body>
   <app-root></app-root>
